인프라 마이그레이션 (#1636)
* refactor: move slack uri from system environment to properties

* feat: update .gitignore to include terraform file exclusions

* feat: add terraform infrastructure and configuration updates for dev

* test: fix broken tests

* feat: upgrade gradle version from 6.8.3 to 8.10

* feat: upgrade spring to 3.4.1 and java to 21

- remove dependencies related to elasticsearch
- delete code implemented using elasticsearch
- eliminate static keyword in entity initialization
- migrate from javax to jakarta
- fix minor problematic code issues
- apply code formatting

* feat: configure application settings using aws secretsmanager

* feat: add secrets manager access role to ec2

* feat: upgrade java version from 1.8 to 21

* feat: update gitHub actions deploy scripts

* feat: update secret name

* feat: update logback configuration to new syntax

* feat: upgrade flyway version from 6.4.2 to 9.x

* feat: add environment variables for build and deploy

* fix: apply spring expression language syntax

* feat: add health check controller

* fix: remove duplicate health check controller

* fix: resolve minor deploy issue

* fix: remove unexpected character from flyway script

* fix: add command to pkill with sudo

* fix: add tf api token

* refactor: remove elastic search dependencies

* fix: change terraform name

* feat: update java version from 11 to 21

---------

Co-authored-by: woowahan-neo <jaeyeonling@woowahan.com>