@@ -1,18 +1,5 @@
 package wooteco.prolog.article.application;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.atLeastOnce;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static wooteco.prolog.login.ui.LoginMember.Authority.ANONYMOUS;
-import static wooteco.prolog.login.ui.LoginMember.Authority.MEMBER;
-import static wooteco.prolog.member.domain.Role.CREW;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -36,6 +23,20 @@ import wooteco.prolog.login.ui.LoginMember;
 import wooteco.prolog.member.application.MemberService;
 import wooteco.prolog.member.domain.Member;
 import wooteco.prolog.member.domain.Role;
+
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.atLeastOnce;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+import static wooteco.prolog.login.ui.LoginMember.Authority.ANONYMOUS;
+import static wooteco.prolog.login.ui.LoginMember.Authority.MEMBER;
+import static wooteco.prolog.member.domain.Role.CREW;
 
 @ExtendWith(MockitoExtension.class)
 class ArticleServiceTest {
@@ -310,7 +311,7 @@ class ArticleServiceTest {
         final Article article = new Article(member, new Title("title"), new Url("url"), new ImageUrl("imageUrl"));
         final LoginMember unLoginMember = new LoginMember(1L, ANONYMOUS);
 
-        when(articleRepository.findAllByOrderByCreatedAtDesc()).thenReturn(Arrays.asList(article));
+        when(articleRepository.findAllByOrderByCreatedAtDesc()).thenReturn(List.of(article));
 
         //when
         final List<ArticleResponse> articleResponses = articleService.getFilteredArticles(unLoginMember, ArticleFilterType.BACKEND, false);
@@ -328,7 +329,7 @@ class ArticleServiceTest {
         final Article article = new Article(member, new Title("title"), new Url("url"), new ImageUrl("imageUrl"));
         final LoginMember loginMember = new LoginMember(1L, MEMBER);
 
-        when(articleRepository.findAllByOrderByCreatedAtDesc()).thenReturn(Arrays.asList(article));
+        when(articleRepository.findAllByOrderByCreatedAtDesc()).thenReturn(List.of(article));
 
         //when
         final List<ArticleResponse> articleResponses = articleService.getFilteredArticles(loginMember, ArticleFilterType.BACKEND, true);
